--- a/transform.html
+++ b/transform.html
@@ -6,10 +6,90 @@
     <link rel="stylesheet" href="./transform.css" />
   </head>
   <body>
-    <div>
+    <div class="card-container">
       <div class="card">
         <img
           src="https://foodie-app-sedorf.netlify.app/assets/pan-fried-CHG_PYFz.jpeg"
+          alt=""
+          class="images"
+        />
+        <p class="title">Recipe</p>
+        <p class="product">Pan-Fried Salmon</p>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://foodie-app-sedorf.netlify.app/assets/semo-Bfej76iq.jpg"
+          alt=""
+          class="images"
+        />
+        <p class="title">Recipe</p>
+        <p class="product">Pan-Fried Salmon</p>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://foodie-app-sedorf.netlify.app/MenuImage/autumn-vegetable-poutine.jpg"
+          alt=""
+          class="images"
+        />
+        <p class="title">Recipe</p>
+        <p class="product">Pan-Fried Salmon</p>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://foodie-app-sedorf.netlify.app/MenuImage/Abacha.png"
+          alt=""
+          class="images"
+        />
+        <p class="title">Recipe</p>
+        <p class="product">Pan-Fried Salmon</p>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://foodie-app-sedorf.netlify.app/assets/mexican-DhT-Ds8I.jpg"
+          alt=""
+          class="images"
+        />
+        <p class="title">Recipe</p>
+        <p class="product">Pan-Fried Salmon</p>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://foodie-app-sedorf.netlify.app/assets/roasted-broccoli-DzVyWZij.jpg"
+          alt=""
+          class="images"
+        />
+        <p class="title">Recipe</p>
+        <p class="product">Pan-Fried Salmon</p>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://foodie-app-sedorf.netlify.app/assets/salmon-cake-Dzr04xyK.jpeg"
+          alt=""
+          class="images"
+        />
+        <p class="title">Recipe</p>
+        <p class="product">Pan-Fried Salmon</p>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://foodie-app-sedorf.netlify.app/assets/spiced-salmon-C0uPBR50.jpeg"
+          alt=""
+          class="images"
+        />
+        <p class="title">Recipe</p>
+        <p class="product">Pan-Fried Salmon</p>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://foodie-app-sedorf.netlify.app/assets/see-food-DglXU-CK.jpg"
           alt=""
           class="images"
         />
